k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  labels:
    app: backend
spec:
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: krmp-d2hub-idock.9rum.cc/dev-test/repo_75b7347af229
          imagePullPolicy: Always
          volumeMounts:
            - name: secret-volume
              mountPath: /app/config
          ports:
            - containerPort: 8092
      volumes:
        - name: secret-volume
          configMap:
            name: my-secret-file
