k8s/mariadb.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mariadb
spec:
  serviceName: mariadb
  selector:
    matchLabels:
      app: mariadb
  template:
    metadata:
      labels:
        app: mariadb
    spec:
      containers:
        - name: mariadb
          # 여러분의 mariadb image 주소를 입력해주세요.
          image: krmp-d2hub-idock.9rum.cc/goorm/mariadb:latest  # Docker Hub의 mariadb 최신 버전 이미지 사용
          resources:
            limits:
              memory: 1Gi
          readinessProbe:
            tcpSocket:
              port: 3306

---
apiVersion: v1
kind: Service
metadata:
  name: mariadb
spec:
  type: ClusterIP
  clusterIP: None # Headless
  selector:
    app: mariadb
  ports:
    - port: 3306
