k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  ports:
    - port: 8092
      targetPort: 8092
  selector:
    app: backend
